Refactor hero section and update image attributes

--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 
     <!-- hero
     ================================================== -->
-    <section id="hero" class="s-hero target-section" data-parallax="scroll" data-image-src="images\Hero-Section.png" data-natural-width=3000 data-natural-height=2000 data-position-y=center>
+    <section id="hero" class="s-hero target-section" 
+         data-parallax="scroll" 
+         data-image-src="images/Hero-Section.png" 
+         data-natural-width="3000" 
+         data-natural-height="2000" 
+         data-position-y="center">
 
         <div class="row hero-content">
 
@@ -134,10 +139,11 @@
                     </div>
 
                     <div class="profile-pic" data-aos="fade-up">
-                        <img src="/images/My-About.png" 
-                             srcset="images\My-About.png 1x, 
-                             images\My-About.png 2x" alt="">
-                    </div>
+        <img src="images/My-About.png" 
+             srcset="images/My-About.png 1x, 
+                     images/My-About.png 2x" 
+             alt="Noor Profile">
+    </div>
 
                     <h3 data-aos="fade-up">Journey</h3>
 
