--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                             Email
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="mailto:#0">0noorulain@gmail.com</a>
+                            <a href="mailto:0noorulain@gmail.com">0noorulain@gmail.com</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <div class="footer-contact-block" data-aos="fade-up">
